# small_language_models_usecases

./: .gitignore  ACTION_ITEMS_AND_FIXES.md  ACTUAL_USE_CASE_RUN_REPORT.md  ALIGNMENT_QUICK_REFERENCE.md  AUDIT_FINDINGS_SUMMARY_TABLE.md  AUDIT_QUICK_SUMMARY.txt  AUDIT_SUMMARY.md  BENCHMARK_2024_OFFICIAL_DATASETS.md  BENCHMARK_CORRECTED_RESULTS.md  CLAUDE copy.md  CODEBASE_ORGANIZATION.md  CODEBASE_STRUCTURE_MAP.md  CODE_CHANGES_BEFORE_AFTER.md  COMPREHENSIVE_AUDIT.md  CONTINUOUS_VALIDATION_SECTION_5_REGULARIZED.md  CORRECTED_RESULTS_EXECUTIVE_SUMMARY.md  CRITICAL_ISSUES_EXPLAINED.md  DEAD_CODE_ANALYSIS.md  DECISION_MATRIX.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DETAILED_CONTRADICTION_ANALYSIS.md  EXECUTION_WALKTHROUGH.md  FAILURE_TAXONOMY.md  FINAL_COMPLETE_BENCHMARK_RESULTS.md  FINAL_STRUCTURE.txt  FIX_SUMMARY.txt  FROZEN_THRESHOLDS_IMPLEMENTATION.md  HOW_TO_FIX.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  INTEGRATION_COMPLETE.md  ISSUE_2_BEFORE_AFTER.md  ISSUE_2_FIX_SUMMARY.md  MATH_AUDIT_EXECUTIVE_SUMMARY.md  NEXT_STEPS_ANALYSIS.md  OPERATIONAL_ZONE_SUMMARY.txt  ORGANIZATION.md  (+72 more)
Information Extraction/: .gitignore  ingest_sroie.py  pyproject.toml
Information Extraction/configs/: sroie_cpu_iter.json  sroie_cpu_iter_phi3.json  sroie_cpu_iter_tinyllama.json  sroie_gemini_iter.json
Information Extraction/data/: README.md
Information Extraction/outputs_hf_llama1b_gemini_pair/: capability_metrics.csv  per_example_predictions.jsonl
Information Extraction/results/: final_capability_metrics.csv  (+4 more)
(+1653 files in other folders)
