[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ie-benchmark"
version = "0.1.0"
description = "Receipt information extraction benchmark pipeline for SROIE-style datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML",
  "torch",
  "transformers"
]

[project.optional-dependencies]
quant = ["bitsandbytes"]

[project.scripts]
ie-benchmark = "ie_benchmark.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
