[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegen-eval"
version = "0.1.0"
description = "Time-bounded code generation evaluation harness for HumanEval and MBPP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19.0",
  "markdown-it-py",
  "psutil>=5.9.8",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
local = [
  "accelerate>=0.30.0",
  "llama-cpp-python",
  "torch>=2.2.0",
  "transformers>=4.41.0",
]
hf_api = [
  "huggingface_hub>=0.23.0",
]
gemini = [
  "google-genai>=0.3.0",
  "google-generativeai>=0.8.0",
]

[project.scripts]
codegen-eval = "codegen_eval.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
